Tweaked some design layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,12 +32,7 @@ p {
     width: fit-content;
 }
 
-.btn-outline-black {
-    background: white;
-    color: black !important; /* use important to overide link colors for <a> elements */
-}
-
-/* .shop-now-button {
+.shop-now-button {
     background: black;
     color: white;
     min-width: 260px;
@@ -48,6 +43,12 @@ p {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to overide link colors for <a> elements */
+    border: 1px solid black;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -56,7 +57,7 @@ p {
 .btn-black:focus {
     background: #222;
     color: white;
-} */
+}
 
 .text-black {
     color: #000 !important;
@@ -67,7 +68,7 @@ p {
 }
 
 .overlay {
-    height: 70%;
+    height: 100%;
     width: 75%;
     top: 20%;
     left: 12.5%;
